# copilot-helix

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  README.md  test.rs
src/: auth.rs  config.rs  helix.rs  initializer.rs  installer.rs  jsonrpc.rs  lib.rs  main.rs  proxy.rs  router.rs  setup.rs  translator.rs  upstream.rs
