[package]
name = "copilot-helix"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "copilot-helix"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "io-std", "sync", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
